--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ section {
 }
 .account{
     text-align: right;
-    padding:15px;
+    padding: 15px;
     font-size: 18px;
     color: #364147;
     
@@ -152,8 +152,8 @@ section {
     height: 60px;
 }
 .profile-pic img{
-    border-radius:100px;
-    max-width:100%;
+    border-radius: 100px;
+    max-width: 100%;
 }
 
 .hero{
@@ -164,7 +164,7 @@ section {
     text-transform: uppercase;
 }
 .hero h1{
-    position: relative, left: -30px;
+    position: relative left: -30px;
     
 }
 .hero h2{
@@ -186,10 +186,10 @@ section {
 
 .banner{
     margin: 55px 15px;
-    width:100%;
+    width: 100%;
     border-top: 1px solid #a0a0a0;
     border-bottom: 1px solid #a0a0a0;
-    padding:25px 0;
+    padding: 25px 0;
     
 }
 .banner img{
@@ -206,7 +206,7 @@ section {
 }
 .banner-text > div:last-child{
     font-size: 16px;
-    font-weight:400;
+    font-weight: 400;
     margin-top: 5px;
 }
 .category{
@@ -220,12 +220,12 @@ section {
 .category-text{
     color: #364147;
     padding: 30px 0;
-    text-transform:uppercase;
+    text-transform: uppercase;
     text-align: center;
 }
 .category-text > div{
     font-size: 16px;
-    font-weight:200;
+    font-weight: 200;
     color: #faa541;
     
 }
