--- a/css/main.css
+++ b/css/main.css
@@ -170,10 +170,16 @@ section {
 .hero h2{
     color: #faa541;
 }
-.hero h1 h2{
+.hero h1{
     font-size: 63px;
     font-weight: 700;
     line-height: 0.9;
+}
+.hero h2{
+    font-size: 63px;
+    font-weight: 700;
+    line-height: 0.9;
+    
 }
 .hero p{
     letter-spacing: 2px;
