--- a/css/main.css
+++ b/css/main.css
@@ -210,7 +210,7 @@ section {
     text-align: center;
     
 }
-.banner-text > div:last-child{
+.banner-text {
     font-size: 16px;
     font-weight: 400;
     margin-top: 5px;
