--- a/css/main.css
+++ b/css/main.css
@@ -229,7 +229,7 @@ section {
     text-transform: uppercase;
     text-align: center;
 }
-.category-text > div{
+.category-text {
     font-size: 16px;
     font-weight: 200;
     color: #faa541;
