--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,8 @@ section {
     text-transform: uppercase;
 }
 .hero h1{
-    position: relative left: -30px;
+    position: relative;
+    left: -30px;
     
 }
 .hero h2{
