--- a/css/main.css
+++ b/css/main.css
@@ -157,7 +157,7 @@ section {
 }
 
 .hero{
-    background-image: url('img/hero.jpg');
+    background-image: url('../img/hero.jpg');
     height: 400px;
     background-size:cover;
     background-position:center center;
