--- a/css/main.css
+++ b/css/main.css
@@ -242,23 +242,29 @@ section {
 .full-banner{
     padding: 0 15px;
     margin: 50px 0;
-    position:relative;
+    position: relative;
 }
-.full-banner: :before{
+.full-banner:before{
+    content:"";
     position:absolute;
     border: 1px solid #ffffff;
-    border-radius: 30px 30px 50px 50px;
+    top: 30px;
+    bottom: 30px;
+    left: 50px;
+    right: 50px;
     z-index: 1;
     
 }
 .full-banner-image{
     flex: 0 0 58.333333%;
     background-image:url('../img/vista.jpg');
-    object-fit:cover;
+    background-size:cover;
+    background-position:top center;
     min-height: 400px;
 }
 .full-banner-sidebar{
     flex: 0 0 41.666667%;
+    background-color: #364147;
     padding: 30px;
     text-transform: uppercase;
     color: #ffffff;
@@ -270,7 +276,7 @@ section {
     color: #637f94;
     line-height: 1;
 }
-.full-banner-sidebar h4: :after{
+.full-banner-sidebar h4:after{
     content:"";
     width:100px;
     height:1px;
@@ -283,12 +289,12 @@ section {
     font-weight:700;
     line-height: 1;
 }
-.full-banner-sidebar > div:nth-last-of-type(2){
+.full-banner-sidebar > div:nth-of-type(2){
     font-size: 25px;
     font-weight: 200;
     letter-spacing: 3px;
 }
-.full-banner-sidebar .btn .btn-default{
+.full-banner-sidebar .btn.btn-default{
     margin-top: 50px;
     text-transform: uppercase;
     letter-spacing: 1px;
