--- a/css/main.css
+++ b/css/main.css
@@ -302,6 +302,7 @@ section {
 }
 
 footer {
+    display:flex;
     flex-wrap: wrap;
     position:relative;
     z-index: 0;
@@ -318,15 +319,12 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 0;
+    z-index: -1;
     
 }
 .lists{
     flex: 0 0 75%;
-    margin-left:15px;
-    margin-right:15px;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding: 40px 15px;
 }
 
 .link-header{
@@ -341,9 +339,11 @@ footer a{
     text-transform: uppercase;
     font-size: 12px;
     padding: 0 0 4px;
+    
+}
+footer a:hover{
     text-decoration: underline;
 }
-
 .social ul li{
     display: inline-block;
 }
@@ -384,7 +384,7 @@ footer a{
 .newsletter input{
     border: 1px solid #364147;
     width: 200px;
-    bottom-margin: 10px;
+    margin-bottom: 10px;
 }
 
 .newsletter button{
@@ -399,6 +399,9 @@ footer a{
     padding: 40px 0;
     color: #e5e5e5;
     font-size: 16px;
+    
+}
+.ps img {
     max-width: 230px;
 }
 
@@ -412,7 +415,7 @@ footer a{
     width: 100%;
     height: 1px;
     margin: 30px 0;
-    background: linear-gradient(to right,#f05a28 0,#e80a89 100%),
+    background: linear-gradient(to right,#f05a28 0,#e80a89 100%);
 }
 
 .copyright{
